fix: text uncentered on small screen widths

--- a/index.css
+++ b/index.css
@@ -64,4 +64,5 @@ a {
 }
 p {
 	margin: 5px;
+	text-align: center;
 }
